# MatlabCodergenDemo

./: LICENSE  MatlabCodergenDemo.rar  README.md
foo/: foo.m  foo.prj
foo/example_dll/: CMakeLists.txt  coder_foo.h  coder_foo_terminate.h  coder_foo_types.h  main.cpp  rtwtypes.h
foo/example_source/: CMakeLists.txt  coder_foo.cpp  coder_foo_terminate.cpp  main.cpp
polyfit/: polyfit.m  polyfit.prj
polyfit/examples_dll/: CMakeLists.txt  main.cpp  polyfit.h  polyfit_emxAPI.h  polyfit_terminate.h  polyfit_types.h  rt_nonfinite.h  rtwtypes.h
polyfit/examples_dll/cpp/: colon.cpp  polyfit.cpp  polyfit_emxAPI.cpp  polyfit_initialize.cpp  qr.cpp  rtGetInf.cpp  (+3 more)
polyfit/examples_source_c(just for  comparison)/: main.c  main.h  polyfit.c  polyfit.h  polyfit_data.c  polyfit_data.h  polyfit_emxAPI.c  polyfit_emxAPI.h  polyfit_emxutil.c  polyfit_emxutil.h  polyfit_initialize.c  polyfit_initialize.h  polyfit_terminate.c  polyfit_terminate.h  polyfit_types.h  qr.c  qr.h  qrsolve.c  qrsolve.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  xgerc.c  xgerc.h  xnrm2.c  xnrm2.h  xzlarf.c  xzlarf.h  xzlarfg.c  xzlarfg.h
polyfit/examples_source_c++/: CMakeLists.txt  main.cpp  mldivide.cpp  polyfit.h  polyfit_emxAPI.h  polyfit_emxutil.cpp  polyfit_emxutil.h  polyfit_initialize.h  polyfit_rtwutil.cpp  polyfit_rtwutil.h  polyfit_terminate.cpp  polyfit_terminate.h  polyfit_types.h  qr.h  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  std.cpp  xgeqp3.cpp  xnrm2.cpp  xnrm2.h  xscal.cpp  xzlarf.h  xzlarfg.cpp  xzlarfg.h
(+18 files in other folders)
